--- a/examples/reference.yml
+++ b/examples/reference.yml
@@ -169,12 +169,15 @@ ext_auth:
 #    is in effect a "deny" rule.
 #  * A special set consisting of a single "*" action means "allow everything".
 #  * If no match is found the default is to deny the request.
-#
-# You can use the following variables from the ticket request in any field:
-#  * ${account} - the account name, currently the same as authenticated user's name.
-#  * ${service} - the service name, specified by auth.token.service in the registry config.
-#  * ${type} - the type of the entity, normally "repository".
-#  * ${name} - the name of the repository (i.e. image), e.g. centos.
+
+# You can use the following replacement tokens from the ticket request in any field.
+# Some systems use the ${} syntax for string replacement so the tokens can be overriden
+# acl_options:
+#   account_token: "${account}" # the account name, currently the same as authenticated user's name.
+#   service_token: "${service}" # the service name, specified by auth.token.service in the registry config.
+#   type_token: "${type}" # the type of the entity, normally "repository".
+#   name_token: "${name}" # the name of the repository (i.e. image), e.g. centos.
+
 acl:
   - match: {ip: "127.0.0.0/8"}
     actions: ["*"]
